Sun Jan 16 00:24:31 2000  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am:
	* docs/makefaq.py: incorporated changes from Dave Seidel
	<dave@superluminal.com>:
	# 14 Jan 2000 - added command line processing, error handling,
	#               comments

Sat Jan 15 23:54:40 2000  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c (toolbar_add_radio): instead of stripping
	"Bse" from the toolbar buttons, strip any kind of namespace prefix.

Sat Jan 15 20:03:19 2000  Tim Janik  <timj@gtk.org>

	* test/bsemixer-test.bse: synthesis network to test the new
	BseMixer plugin.

Fri Jan 14 15:06:29 2000  Tim Janik  <timj@gtk.org>

        * released beast-0.3.1.tar.gz on http://beast.gtk.org.

Fri Jan 14 02:41:14 2000  Tim Janik  <timj@gtk.org>

	* configure.in: check for python and fold, since we use them in the
	docs/ dir for file generation.

	* docs/Makefile.am: 
	* docs/faq.src: 
	* docs/text.1.faq:
	* docs/text.2.faq:
	* docs/makefaq.py:
	generate faq.txt now, files and build setup provided by Dave Seidel
	<dave@superluminal.com>.

Thu Jan 13 19:10:19 2000  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c (main): 
	* beast-gtk/bstgconfig.[hc]: added debugging ability to disable
	ALSA driver (since we give it precedence over OSS), so the OSS
	code can be tested with ALSA's OSS emulation.

Wed Jan 12 23:51:23 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstparam.c (bst_param_apply):
        (bst_param_update):
        (bst_param_create): added missing BSE_TYPE_PARAM_ENUM support.

Sun Jan  9 12:51:23 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstgconfig.[hc]: implemented BEAST configuration settings
	  with a BstGlobals struct and a BstGConfig object.

        * beast-gtk/bstpreferences.[hc]: feature BstGConfig object by adding a
	  notebook page for the object settings derived frmo BSE_TYPE_GCONFIG.

        * beast-gtk/main.c: cache the keytable in the config settings, so we
        don't need to requery it upon every startup (and risk triggering the